# pym2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  packages.yml  release.yml
docs/: ARCHITECTURE.md  DEV_RULES.md  RELEASE_NOTES_1.2.0.md  releasing.md
packaging/: build-metadata.env  config.toml  pym2.service
scripts/: build-deb.sh  build-rpm.sh  smoke.sh
src/: error.rs  main.rs
src/agent/: mod.rs  web.rs
src/cli/: mod.rs
src/config/: mod.rs
src/ipc/: client.rs  server.rs
src/model/: mod.rs
src/schedule/: mod.rs
src/supervisor/: mod.rs
src/tui/: mod.rs
