[package]
name = "pym2"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
default = ["tui"]
tui = []
webui = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
libc = "0.2"
shell-words = "1.1"
